# ChangeLog for gnome-extra/gnome-utils
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gnome-utils/ChangeLog,v 1.79 2005/04/02 05:02:07 geoman Exp $

  02 Apr 2005; Stephen P. Becker <geoman@gentoo.org>
  gnome-utils-2.8.1.ebuild:
  stable on mips

  19 Mar 2005; Mike Doty <kingtaco@gentoo.org> gnome-utils-2.10.0.ebuild:
  ~amd64, bug 85028

  11 Mar 2005; Gustavo Zacarias <gustavoz@gentoo.org>
  gnome-utils-2.10.0.ebuild:
  To ~sparc

*gnome-utils-2.10.0 (09 Mar 2005)

  09 Mar 2005; Joe McCann <joem@gentoo.org> +gnome-utils-2.10.0.ebuild:
  gnome-2.10 release

  08 Jan 2005; Tom Martin <slarti@gentoo.org> gnome-utils-2.8.1.ebuild:
  Stable on amd64.

  29 Dec 2004; Joe McCann <joem@gentoo.org> gnome-utils-2.8.1.ebuild:
  Now using DESTDIR instead of einstall, bug 75868

  29 Dec 2004; Ciaran McCreesh <ciaranm@gentoo.org> :
  Change encoding to UTF-8 for GLEP 31 compliance

  24 Dec 2004; Bryan Østergaard <kloeri@gentoo.org>
  gnome-utils-2.8.1.ebuild:
  Stable on alpha.

  23 Dec 2004; Guy Martin <gmsoft@gentoo.org> gnome-utils-2.8.1.ebuild:
  Stable on hppa.

  22 Dec 2004; Gustavo Zacarias <gustavoz@gentoo.org>
  gnome-utils-2.8.1.ebuild:
  Stable on sparc

  19 Dec 2004; Mike Gardiner <obz@gentoo.org> gnome-utils-2.8.1.ebuild:
  Keyworded x86 and ppc for GNOME 2.8.1

  11 Dec 2004; Bryan Østergaard <kloeri@gentoo.org>
  gnome-utils-2.8.0.ebuild:
  Stable on alpha.

*gnome-utils-2.8.1 (25 Nov 2004)

  25 Nov 2004; Mike Gardiner <obz@gentoo.org> -gnome-utils-2.4.0.ebuild,
  -gnome-utils-2.6.0.ebuild, +gnome-utils-2.8.1.ebuild:
  New version, culled older versions

  12 Nov 2004; Mike Gardiner <obz@gentoo.org> gnome-utils-2.8.0.ebuild:
  Keyworded ppc for GNOME 2.8

*gnome-utils-2.8.0 (12 Nov 2004)

  12 Nov 2004; Gustavo Zacarias <gustavoz@gentoo.org>
  gnome-utils-2.8.0.ebuild:
  Stable on sparc

  01 Oct 2004; Stephen P. Becker <geoman@gentoo.org>
  gnome-utils-2.6.2-r1.ebuild: