@@ -1,15 +1,25 @@
-MD5 680df545350e6f47ebb90b9b87b4ae12 gnome-utils-2.6.2-r1.ebuild 1038
-MD5 ec3c2978b395559f9004937abed4523f gnome-utils-2.8.1.ebuild 1043
-MD5 794b8b1d8306de88459b460642e86af4 gnome-utils-2.4.1.ebuild 1236
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
+MD5 64f584655222d6d74566f0e3bdd6a561 ChangeLog 9870
 MD5 62292c35e7929905ad1e54d64faf457f gnome-utils-1.4.1.2.ebuild 1770
+MD5 680df545350e6f47ebb90b9b87b4ae12 gnome-utils-2.6.2-r1.ebuild 1038
 MD5 7ee7b90f752d9f748a2e3a914d899c33 gnome-utils-2.8.0.ebuild 1046
-MD5 0915c6aeec80f9c56d107d51a1286977 gnome-utils-2.10.0.ebuild 1169
-MD5 0350d2ee52473e378486c24a88af4f85 ChangeLog 9698
+MD5 ec3c2978b395559f9004937abed4523f gnome-utils-2.8.1.ebuild 1043
 MD5 03ad2e6c4ab41244af1015a8bbb0b39f metadata.xml 158
-MD5 7f6c4dde21c087f0af77c8374ca6da31 files/gnome-utils-2.6.2-gfloppymajor.patch 933
+MD5 0915c6aeec80f9c56d107d51a1286977 gnome-utils-2.10.0.ebuild 1169
+MD5 5bbd3dd3d722da151261c14577092bca gnome-utils-2.10.1.ebuild 1168
+MD5 5ed644c587beafb4c4a1461bbe322a1d files/digest-gnome-utils-1.4.1.2 72
 MD5 905deb658d4e4b2ab55f3101851e7da4 files/digest-gnome-utils-2.6.2-r1 71
-MD5 536b1103c2a53ca7485697352a308809 files/digest-gnome-utils-2.10.0 72
-MD5 5bd26bcde1ddcf7e2246aabdcdaac8af files/digest-gnome-utils-2.4.1 71
 MD5 d9a86bd0e29d148f71627cfc879089b6 files/digest-gnome-utils-2.8.0 71
 MD5 41af2c6a875d5a02609b98998a2cf614 files/digest-gnome-utils-2.8.1 71
-MD5 5ed644c587beafb4c4a1461bbe322a1d files/digest-gnome-utils-1.4.1.2 72
+MD5 7f6c4dde21c087f0af77c8374ca6da31 files/gnome-utils-2.6.2-gfloppymajor.patch 933
+MD5 536b1103c2a53ca7485697352a308809 files/digest-gnome-utils-2.10.0 72
+MD5 caf01bac7da4888355b1c173652d2525 files/digest-gnome-utils-2.10.1 72
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v1.4.0 (GNU/Linux)
+
+iD8DBQFCW/qpXjcVihsel0ERAnkBAJ45BvlXnCJG26Nkot+8q1pn0//OkgCg9bV0
+2zlvA7Samf7bGz48hY+x++U=
+=mBfd
+-----END PGP SIGNATURE-----
