@@ -1,6 +1,12 @@
 # ChangeLog for gnome-extra/gnome-utils
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gnome-utils/ChangeLog,v 1.79 2005/04/02 05:02:07 geoman Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gnome-utils/ChangeLog,v 1.80 2005/04/12 16:44:28 joem Exp $
+
+*gnome-utils-2.10.1 (12 Apr 2005)
+
+  12 Apr 2005; Joe McCann <joem@gentoo.org> +gnome-utils-2.10.1.ebuild,
+  -gnome-utils-2.4.1.ebuild:
+  bugfix release, remove old ebuilds
 
   02 Apr 2005; Stephen P. Becker <geoman@gentoo.org>
   gnome-utils-2.8.1.ebuild:
